<resources>
    <string name="app_name">Profil</string>
    <string name="nama">Muhammad Nurkhaliq</string>
    <string name="nim">H1101171030</string>
    <string name="snilai">Simulasi Nilai</string>
    <string name="cuaca">Cuaca</string>
    <string name="nilai">Nilai</string>
    <string name="profil">Profil</string>
    <string name="ikon1">Ikon 1</string>
    <string name="Ikon2">Ikon 2</string>
    <string name="saran">Saran</string>
    <string name="about">Tentang</string>
</resources>
