<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:adjustViewBounds="true"
                android:scaleType="center"
                android:src="@drawable/bg1" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="220dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profil2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="330dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/nama"
                android:textColor="#242424"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="360dp"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="center_horizontal"
                android:text="@string/nim"
                android:textColor="#242424"
                android:textSize="18dp"/>
        </FrameLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <LinearLayout
            android:id="@+id/btnSimulasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|center_horizontal"
                android:scaleType="fitCenter"
                android:src="@drawable/snilai" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"
                android:text="@string/snilai" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnCuaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|center_horizontal"
                android:scaleType="fitCenter"
                android:src="@drawable/weather" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"
                android:text="@string/cuaca" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnNilai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|center_horizontal"
                android:scaleType="fitCenter"
                android:src="@drawable/nilai" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"
                android:text="@string/nilai" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnProfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|center_horizontal"
                android:scaleType="fitCenter"
                android:src="@drawable/profil1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"
                android:text="@string/profil" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:onClick="telponNomor">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:layout_gravity="top|center_horizontal"
                android:src="@drawable/telpon" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"
                android:text="@string/ikon1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:onClick="map">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:layout_gravity="top|center_horizontal"
                android:src="@drawable/map" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"
                android:text="@string/Ikon2" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnSaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:layout_gravity="top|center_horizontal"
                android:src="@drawable/saran" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"
                android:text="@string/saran" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnTentang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:layout_gravity="top|center_horizontal"
                android:src="@drawable/about" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"
                android:text="@string/about" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>